# libopenmpt-sys

./: Cargo.toml  LICENSE  README.md  build.rs  regenerate_bindings.sh  wrapper.h
examples/: play.rs
src/: bindings.rs  lib.rs
